fix: apr fix: wagyu price

--- a/public/locales/ar-SA.json
+++ b/public/locales/ar-SA.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "الملف التعريفي في Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "ثم سجِّل في المسابقة بالنقر على زر \"أريد خوض المعركة\" أعلاه.",
   "Battle Time": "وقت المعركة",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "تداول VLX/BUSD، وWAGYU/VLX، وETH/VLX، وBTCB/VLX خلال فترة المعركة لتعزيز نتيجتك ونتيجة فريقك. انظر قسم القواعد أدناه لمعرفة المزيد.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "تداول VLX/VUSDT، وWAGYU/VLX، وETH/VLX، وBTCB/VLX خلال فترة المعركة لتعزيز نتيجتك ونتيجة فريقك. انظر قسم القواعد أدناه لمعرفة المزيد.",
   "Prize Claim": "المطالبة بالجائزة",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "سيتم ترتيب الفريق والمتداولين حسب حجم التداول. قم بتحصيل جوائزك واحتفل!",
   "Registration starting April 5": "سيبدأ التسجيل في 5 أبريل",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "لن يتم التراجع عن هذا القرار.",
   "I understand that my address may be displayed publicly throughout the competition.": "أتفهم أن عنواني قد يتم عرضه علنًا خلال فترة المسابقة.",
   "Eligible trading pairs": "أزواج التداول المؤهلة",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "سيتم تضمين التداولات على VLX/BUSD، وWAGYU/VLX، وETH/VLX، وBTCB/VLX فقط في حسابات حجم التداول.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "سيتم تضمين التداولات على VLX/VUSDT، وWAGYU/VLX، وETH/VLX، وBTCB/VLX فقط في حسابات حجم التداول.",
   "Calculating team ranks and winners": "حساب ترتيبات الفرق والفائزين",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "يتم حساب ترتيبات الفرق من خلال إجمالي حجم التداول المجمَّع لأعلى 500 عضو في كل فريق.",
   "Prize distribution": "توزيع الجوائز",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "سيتم توزيع الجوائز في صورة WAGYU ومشاركتها من قِبل جميع الأعضاء في كل درجة حسب قسم الجوائز أعلاه.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "سيتم توزيع جوائز WAGYU حسب سعر WAGYU/BUSD في يوم التوزيع. وسيربح كل مشارك مؤهل الجوائز في نهاية المسابقة.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "سيتم توزيع جوائز WAGYU حسب سعر WAGYU/VUSDT في يوم التوزيع. وسيربح كل مشارك مؤهل الجوائز في نهاية المسابقة.",
   "Every participant will win at least one prize at the end of the competition": "سيربح كل مشاركة جائزة واحدة على الأقل في نهاية المسابقة.",
   "Fine print": "الشروط والأحكام",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "في حال عدم الاتفاق على الفريق الفائز أو الترتيب، ستقرر WagyuSwap ذلك.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "كيف يمكنني المطالبة بجائزتي؟",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "بعد انتهاء المعركة، قم بزيارة صفحة الفعالية وانقر على زر \"المطالبة بالجوائز\" في القسم العلوي أو في قسم \"نتيجتك\". بعد المطالبة بجوائزك بنجاح، سيتغيَّر نص الزر إلى \"تمت المطلبة بالجوائز\".",
   "Trade to increase your rank": "تداول لزيادة ترتيبك",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "الأزواج المؤهلة: VLX/BUSD، وWAGYU/VLX، وETH/VLX، وBTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "الأزواج المؤهلة: VLX/VUSDT، وWAGYU/VLX، وETH/VLX، وBTCB/VLX",
   "Play as a team": "العب ضمن فريق",
   "The higher your team’s rank, the better your prizes": "كلما ارتفع ترتيب فريقك، أصبحت جوائزك أفضل",
   "Top Traders": "أفضل المتداولين",
