--- a/public/locales/es-ES.json
+++ b/public/locales/es-ES.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Perfil de Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "luego, regístrate en la competencia haciendo clic en el botón de arriba \"QUIERO IR A LA BATALLA\".",
   "Battle Time": "Hora de la batalla",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negocia con VLX/BUSD, WAGYU VLX, ETH/VLX y BTCB/VLX en el tiempo que dure la batalla para aumentar tanto la puntuación de tu equipo como la tuya. Para obtener más información, consulta la sección Reglas.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negocia con VLX/VUSDT, WAGYU VLX, ETH/VLX y BTCB/VLX en el tiempo que dure la batalla para aumentar tanto la puntuación de tu equipo como la tuya. Para obtener más información, consulta la sección Reglas.",
   "Prize Claim": "Cobrar premio",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Los equipos y los traders se clasificarán por el orden del volumen de operaciones. ¡Recoge tus premios y celebra!",
   "Registration starting April 5": "La inscripción inicia el 5 de abril",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Esta decisión no podrá revertirse.",
   "I understand that my address may be displayed publicly throughout the competition.": "Entiendo que mi dirección puede mostrarse públicamente durante la competencia.",
   "Eligible trading pairs": "Pares comerciales elegibles",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "En los cálculos del volumen solo se incluirán las operaciones con los pares VLX/BUSD, WAGYU/VLX, ETH/VLX y BTCB/VLX.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "En los cálculos del volumen solo se incluirán las operaciones con los pares VLX/VUSDT, WAGYU/VLX, ETH/VLX y BTCB/VLX.",
   "Calculating team ranks and winners": "Cálculo de la clasificación y de los equipos ganadores",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Las clasificaciones de los equipos se calculan a partir del volumen total combinado respecto a los 500 mejores miembros de cada equipo.",
   "Prize distribution": "Repartición de premios",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Los premios se repartirán en WAGYU y se compartirán con todos los miembros de cada nivel según la sección de premios anterior.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Los premios WAGYU se repartirán según el precio en WAGYU/BUSD que tengan el día de la repartición. Cada participante elegible ganará premios al final de la competencia.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Los premios WAGYU se repartirán según el precio en WAGYU/VUSDT que tengan el día de la repartición. Cada participante elegible ganará premios al final de la competencia.",
   "Every participant will win at least one prize at the end of the competition": "Cada participante ganará al menos un premio al final de la competencia",
   "Fine print": "Cláusulas",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "En caso de que haya un desacuerdo sobre el equipo que resulte ganador o la clasificación final, WagyuSwap tendrá la última palabra.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "¿Cómo puedo cobrar mis premios?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Después de que termine la batalla, visita la página del evento y haz clic en el botón \"Cobrar premios\" que se encuentra en la parte superior de la sección o en la pestaña \"Tu puntuación\". Cuando hayas cobrado correctamente tus premios, el texto del botón cambiará a \"Premios cobrados\".",
   "Trade to increase your rank": "Haz negociaciones para mejorar tu clasificación",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pares elegibles: VLX/BUSD, WAGYU/VLX, ETH/VLX y BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pares elegibles: VLX/VUSDT, WAGYU/VLX, ETH/VLX y BTCB/VLX",
   "Play as a team": "Juega en equipo",
   "The higher your team’s rank, the better your prizes": "Entre más alta sea la clasificación de tu equipo, mejores serán tus premios",
   "Top Traders": "Los mejores traders",
