--- a/public/locales/fi-FI.json
+++ b/public/locales/fi-FI.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu-profiili",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "rekisteröidy sitten kilpailuun napsauttamalla alla olevaa HALUAN TAISTELLA -painiketta.",
   "Battle Time": "Taisteluaika",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Käy kauppaa VLX/BUSD-, WAGYU/VLX-, ETH/VLX- jaBTCB/VLX-poleteilla taistelujakson aikana parantaaksesi sekä sinun että tiimisi pistemäärää. Katso lisätietoja alla olevasta Säännöt-osasta.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Käy kauppaa VLX/VUSDT-, WAGYU/VLX-, ETH/VLX- jaBTCB/VLX-poleteilla taistelujakson aikana parantaaksesi sekä sinun että tiimisi pistemäärää. Katso lisätietoja alla olevasta Säännöt-osasta.",
   "Prize Claim": "Palkintojen lunastaminen",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Tiimit ja kaupankävijät asetetaan järjestykseen kaupankäynnin volyymin mukaan. Kerää palkintosi ja juhli!",
   "Registration starting April 5": "Rekisteröinti alkaa 5. huhtikuuta",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Päätöstä ei voi kumota.",
   "I understand that my address may be displayed publicly throughout the competition.": "Ymmärrän, että osoitteeni voidaan näyttää julkisesti kilpailun aikana.",
   "Eligible trading pairs": "Kelvolliset kaupankäyntiparit",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Vain VLX/BUSD-, WAGYU/VLX-, ETH/VLX- ja BTCB/VLX-parien kaupankäynti sisällytetään volyymilaskelmiin.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Vain VLX/VUSDT-, WAGYU/VLX-, ETH/VLX- ja BTCB/VLX-parien kaupankäynti sisällytetään volyymilaskelmiin.",
   "Calculating team ranks and winners": "Tiimien sijoitusten ja voittajien laskeminen",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Tiimien sijoitukset lasketaan kunkin tiimin 500 parhaan jäsenen kokonaisvolyymin perusteella.",
   "Prize distribution": "Palkintojen jakautuminen",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Palkinnot jaetaan WAGYUna ja jaetaan kunkin tason kaikkien jäsenten kesken yllä olevat Palkinnot-osan mukaisesti.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU-palkinnot jaetaan jakopäivän WAGYU/BUSD-hinnan mukaan. Jokainen kelpoinen osallistuja voittaa palkintoja kilpailun päättyessä.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU-palkinnot jaetaan jakopäivän WAGYU/VUSDT-hinnan mukaan. Jokainen kelpoinen osallistuja voittaa palkintoja kilpailun päättyessä.",
   "Every participant will win at least one prize at the end of the competition": "Jokainen osallistuja voittaa vähintään yhden palkinnon kilpailun päätteeksi",
   "Fine print": "Yksityiskohtaiset tiedot",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "Jos voittavasta tiimistä tai sijoituksesta on erimielisyyttä, WagyuSwap tekee lopullisen päätöksen.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Miten lunastan palkintoni?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Käy taistelun päätyttyä tapahtumasivulla ja napsauta yläosassa tai Tuloksesi-osassa olevaa Lunasta palkintoja -painiketta. Kun olet lunastanut palkintosi, painikkeen tekstiksi vaihtuu Palkinnot lunastettu.",
   "Trade to increase your rank": "Paranna sijoitustasi käymällä kauppaa",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Kelpoisat parit: VLX/BUSD, WAGYU/VLX, ETH/VLX ja BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Kelpoisat parit: VLX/VUSDT, WAGYU/VLX, ETH/VLX ja BTCB/VLX",
   "Play as a team": "Pelaa tiiminä",
   "The higher your team’s rank, the better your prizes": "Mitä paremmin tiimisi sijoittuu, sitä parempia ovat palkintosi",
   "Top Traders": "Parhaat kaupankävijät",
