--- a/public/locales/fr-FR.json
+++ b/public/locales/fr-FR.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profil Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "puis inscrivez-vous au concours en cliquant sur le bouton « JE VEUX TENTER MA CHANCE » ci-dessus.",
   "Battle Time": "Heure de la bataille",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Échangez des VLX/BUSD, WAGYU VLX, ETH/VLX et BTCB/VLX pendant la période de bataille pour augmenter votre score et celui de votre équipe. Consultez la section Règles ci-dessous pour en savoir plus.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Échangez des VLX/VUSDT, WAGYU VLX, ETH/VLX et BTCB/VLX pendant la période de bataille pour augmenter votre score et celui de votre équipe. Consultez la section Règles ci-dessous pour en savoir plus.",
   "Prize Claim": "Récupération des récompenses",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Les équipes et les traders seront classés par ordre de volume de trading. Récupérez vos récompenses et célébrez l'événement !",
   "Registration starting April 5": "Les inscriptions commencent le 5 avril",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Cette décision ne peut être annulée.",
   "I understand that my address may be displayed publicly throughout the competition.": "Je comprends que mon adresse peut être affichée publiquement tout au long du concours.",
   "Eligible trading pairs": "Paires éligibles au trading",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Seules les transactions sur les paires VLX/BUSD, WAGYU/VLX, ETH/VLX et BTCB/VLX seront incluses dans les calculs de volume.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Seules les transactions sur les paires VLX/VUSDT, WAGYU/VLX, ETH/VLX et BTCB/VLX seront incluses dans les calculs de volume.",
   "Calculating team ranks and winners": "Calcul du classement et des équipes gagnantes",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Les classements des équipes sont calculés en fonction du volume total combiné des 500 meilleurs membres de chaque équipe respective.",
   "Prize distribution": "Distribution des récompenses",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Les récompenses seront distribuées en WAGYU et partagés par tous les membres de chaque niveau respectif conformément à la section Prix ci-dessus.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Les récompenses WAGYU seront distribuées selon le prix WAGYU/BUSD le jour de la distribution. Chaque participant éligible gagnera des récompenses à la fin du concours.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Les récompenses WAGYU seront distribuées selon le prix WAGYU/VUSDT le jour de la distribution. Chaque participant éligible gagnera des récompenses à la fin du concours.",
   "Every participant will win at least one prize at the end of the competition": "Chaque participant gagnera au moins une récompense à la fin du concours",
   "Fine print": "Petits caractères",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "En cas de désaccord concernant l'équipe gagnante finale ou le classement, la position de WagyuSwap prévaudra.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Comment puis-je récupérer ma ou mes récompenses ?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Une fois la bataille terminée, visitez la page de l'événement et cliquez sur le bouton « Récupérer les récompenses » dans la section supérieure ou dans la section « Votre score ». Une fois que vous aurez récupéré vos récompenses avec succès, le texte du bouton deviendra « Récompenses récupérées ».",
   "Trade to increase your rank": "Réalisez des opérations de trading pour grimper dans le classement",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Paires éligibles : VLX/BUSD, WAGYU/VLX, ETH/VLX et BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Paires éligibles : VLX/VUSDT, WAGYU/VLX, ETH/VLX et BTCB/VLX",
   "Play as a team": "Jouer en équipe",
   "The higher your team’s rank, the better your prizes": "Plus le classement de votre équipe est élevé, meilleurs seront vos récompenses",
   "Top Traders": "Meilleurs traders",
