--- a/public/locales/hi-IN.json
+++ b/public/locales/hi-IN.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu प्रोफ़ाइल",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "फिर ऊपर “मैं बैटल करना चाहता हूं” बटन पर क्लिक करके प्रतियोगिता के लिए रजिस्टर करें।",
   "Battle Time": "बैटल टाइम",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "अपना और अपनी टीम दोनों का स्कोर बढ़ाने के लिए बैटल की अवधि में VLX/BUSD, WAGYU/VLX, ETH/VLX और BTCB/VLX को ट्रेड करें। अधिक जानकारी के लिए नीचे नियम सेक्शन देखें।",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "अपना और अपनी टीम दोनों का स्कोर बढ़ाने के लिए बैटल की अवधि में VLX/VUSDT, WAGYU/VLX, ETH/VLX और BTCB/VLX को ट्रेड करें। अधिक जानकारी के लिए नीचे नियम सेक्शन देखें।",
   "Prize Claim": "पुरस्कार क्लेम करें",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "ट्रे़डिंग वॉल्यूम के क्रम में टीमों और ट्रेडर्स को रैंकिंग दी जाएगी। अपने पुरस्कार कलेक्ट करें और खुशी मनाएं!",
   "Registration starting April 5": "रजिस्ट्रेशन 5 अप्रैल से शुरू हो रहा है",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "इस फैसले को वापस नहीं लिया जा सकता है।",
   "I understand that my address may be displayed publicly throughout the competition.": "मैं समझता हूं कि मेरा पता पूरी प्रतियोगिता के दौरान सार्वजनिक रूप से प्रदर्शित किया जाएगा।",
   "Eligible trading pairs": "ट्रेडिंग के मान्य पेयर",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "वॉल्यूम की गणना में केवल VLX/BUSD, WAGYU/VLX, ETH/VLX और BTCB/VLX पेयर के ट्रेड ही शामिल किए जाएंगे।",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "वॉल्यूम की गणना में केवल VLX/VUSDT, WAGYU/VLX, ETH/VLX और BTCB/VLX पेयर के ट्रेड ही शामिल किए जाएंगे।",
   "Calculating team ranks and winners": "टीम रैंकिंग और विजेताओं की गणना की जा रही है",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "टीम रैंकिंग की गणना हर संबंधित टीम के शीर्ष 500 सदस्यों के कुल संयुक्त वॉल्यूम के आधार पर की जाती है।",
   "Prize distribution": "पुरस्कार वितरण",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "पुरस्कार WAGYU के रूप में वितरित किए जाते हैं और उपरोक्त पुरस्कार सेक्शन के अनुसार प्रत्येक संबंधित टियर के सभी सदस्यों द्वारा शेयर किए जाते हैं।",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU पुरस्कारों को वितरण के दिन की WAGYU/BUSD कीमत के अनुसार वितरित किया जाएगा। प्रतियोगिता के अंत में प्रत्येक मान्य भागीदार पुरस्कार जीतेगा।",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU पुरस्कारों को वितरण के दिन की WAGYU/VUSDT कीमत के अनुसार वितरित किया जाएगा। प्रतियोगिता के अंत में प्रत्येक मान्य भागीदार पुरस्कार जीतेगा।",
   "Every participant will win at least one prize at the end of the competition": "प्रतियोगिता के अंत में प्रत्येक भागीदार कम से कम एक पुरस्कार जरूर जीतेगा",
   "Fine print": "बारीक अक्षर",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "अंतिम विजेता टीम या रैंक के संबंध में असहमति होने की स्थिति में, WagyuSwap के पास अंतिम निर्णय करने का अधिकार होगा।",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "मैं अपने पुरस्कार कैसे क्लेम करूं?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "बैटल खत्म होने के बाद, इवेंट पेज पर जाएं और टॉप सेक्शन में या “आपका स्कोर” सेक्शन में “पुरस्कार क्लेम करें” बटन पर क्लिक करें। अपने पुरस्कारों को सफलतापूर्वक क्लेम करने के बाद, बटन का टेक्स्ट “पुरस्कार क्लेम किए गए\" में बदल जाएगा।",
   "Trade to increase your rank": "अपना रैंक बढ़ाने के लिए ट्रेड करें",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "मान्य पेयर: VLX/BUSD, WAGYU/VLX, ETH/VLX और BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "मान्य पेयर: VLX/VUSDT, WAGYU/VLX, ETH/VLX और BTCB/VLX",
   "Play as a team": "एक टीम के रूप में खेलें",
   "The higher your team’s rank, the better your prizes": "आपकी टीम की रैंकिंग जितनी बेहतर होती है, आपके पुरस्कार उतने बेहतर होते हैं",
   "Top Traders": "शीर्ष ट्रेडर्स",
