--- a/public/locales/id-ID.json
+++ b/public/locales/id-ID.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profil Wagyu Anda",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "lalu, daftarkan diri untuk mengikuti kompetisi dengan mengeklik tombol \"SAYA INGIN BATTLE\" di atas.",
   "Battle Time": "Waktu Battle",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Perdagangkan VLX/BUSD, WAGYU/VLX, ETH/VLX, dan BTCB/VLX selama periode battle untuk meningkatkan skor Anda dan tim Anda. Kunjungi bagian Aturan di bawah ini untuk mengetahui lebih lanjut.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Perdagangkan VLX/VUSDT, WAGYU/VLX, ETH/VLX, dan BTCB/VLX selama periode battle untuk meningkatkan skor Anda dan tim Anda. Kunjungi bagian Aturan di bawah ini untuk mengetahui lebih lanjut.",
   "Prize Claim": "Klaim Hadiah",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Tim dan pedagang akan diurutkan berdasarkan volume perdagangan. Ambil hadiah Anda dan rayakan!",
   "Registration starting April 5": "Pendaftaran dimulai pada tanggal 5 April",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Keputusan ini tidak dapat dibatalkan.",
   "I understand that my address may be displayed publicly throughout the competition.": "Saya memahami bahwa alamat saya mungkin akan ditampilkan untuk umum sepanjang kompetisi.",
   "Eligible trading pairs": "Pasangan perdagangan yang memenuhi syarat",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Hanya perdagangan pasangan VLX/BUSD, WAGYU/VLX, ETH/VLX, dan BTCB/VLX yang akan disertakan dalam penghitungan volume.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Hanya perdagangan pasangan VLX/VUSDT, WAGYU/VLX, ETH/VLX, dan BTCB/VLX yang akan disertakan dalam penghitungan volume.",
   "Calculating team ranks and winners": "Menghitung pemenang dan peringkat tim",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Peringkat tim dihitung dengan total volume gabungan dari 500 anggota teratas di setiap tim.",
   "Prize distribution": "Pembagian hadiah",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Hadiah akan dibagikan dalam bentuk WAGYU dan dibagikan kepada semua anggota masing-masing tingkat sesuai dengan bagian pasal Hadiah di atas.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Hadiah WAGYU akan dibagikan sesuai dengan harga WAGYU/BUSD pada hari pembagian. Setiap peserta yang memenuhi syarat akan meraih hadiah pada akhir kompetisi.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Hadiah WAGYU akan dibagikan sesuai dengan harga WAGYU/VUSDT pada hari pembagian. Setiap peserta yang memenuhi syarat akan meraih hadiah pada akhir kompetisi.",
   "Every participant will win at least one prize at the end of the competition": "Setiap peserta akan meraih minimal satu hadiah pada akhir kompetisi",
   "Fine print": "Tulisan cetak kecil",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "Jika ada perselisihan menyangkut peringkat atau tim pemenang akhir, hanya WagyuSwap yang berhak memberikan keputusan.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Bagaimana cara mengeklaim hadiah saya?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Setelah battle berakhir, kunjungi halaman acara, lalu klik tombol \"Klaim Hadiah\" pada bagian atas atau pada bagian \"Skor Anda\". Setelah Anda berhasil mengeklaim hadiah, teks tombol akan berubah menjadi \"Hadiah Diklaim\".",
   "Trade to increase your rank": "Berdagang untuk meningkatkan peringkat Anda",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pasangan yang memenuhi syarat: VLX/BUSD, WAGYU/VLX, ETH/VLX, dan BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pasangan yang memenuhi syarat: VLX/VUSDT, WAGYU/VLX, ETH/VLX, dan BTCB/VLX",
   "Play as a team": "Bermain sebagai tim",
   "The higher your team’s rank, the better your prizes": "Semakin tinggi peringkat tim Anda, semakin bagus hadiahnya",
   "Top Traders": "Pedagang Teratas",
