--- a/public/locales/pl-PL.json
+++ b/public/locales/pl-PL.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profil Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "następnie zarejestruj się w konkursie, klikając powyższy przycisk „CHCĘ WALCZYĆ”.",
   "Battle Time": "Czas bitwy",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Handluj VLX/BUSD, WAGYU/VLX, ETH/VLX i BTCB/VLX w okresie bitwy, aby podnieść wynik zarówno swój, jak i swojego zespołu. Więcej informacji zawiera poniższa sekcja Zasady.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Handluj VLX/VUSDT, WAGYU/VLX, ETH/VLX i BTCB/VLX w okresie bitwy, aby podnieść wynik zarówno swój, jak i swojego zespołu. Więcej informacji zawiera poniższa sekcja Zasady.",
   "Prize Claim": "Odbiór nagrody",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Pozycje zespołów i traderów w rankingu zostaną określone na podstawie wolumenu obrotów. Odbierz swoje nagrody i świętuj!",
   "Registration starting April 5": "Rejestracja zaczyna się 5 kwietnia",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Tej decyzji nie można cofnąć.",
   "I understand that my address may be displayed publicly throughout the competition.": "Rozumiem, że mój adres może być publicznie wyświetlany podczas konkursu.",
   "Eligible trading pairs": "Kwalifikujące się pary transakcyjne",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "W obliczeniach wolumenu będą uwzględniane tylko transakcje na parach VLX/BUSD, WAGYU/VLX, ETH/VLX i BTCB/VLX.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "W obliczeniach wolumenu będą uwzględniane tylko transakcje na parach VLX/VUSDT, WAGYU/VLX, ETH/VLX i BTCB/VLX.",
   "Calculating team ranks and winners": "Obliczanie pozycji zespołów w rankingu i zwycięzców",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Pozycje zespołów w rankingu są obliczane na podstawie łącznej sumy obrotów 500 najlepszych członków każdego z zespołów.",
   "Prize distribution": "Rozdział nagród",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Nagrody zostaną rozdzielone w WAGYU i podzielone między wszystkich członków każdego poziomu, zgodnie powyższą z sekcją Nagrody.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Nagrody WAGYU zostaną rozdzielone zgodnie z kursem WAGYU/BUSD w dniu rozdziału. Każdy uprawniony uczestnik wygra nagrody na koniec konkursu.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Nagrody WAGYU zostaną rozdzielone zgodnie z kursem WAGYU/VUSDT w dniu rozdziału. Każdy uprawniony uczestnik wygra nagrody na koniec konkursu.",
   "Every participant will win at least one prize at the end of the competition": "Każdy uczestnik wygra na koniec konkursu co najmniej jedną nagrodę",
   "Fine print": "Drobny druk",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "W przypadku niezgody co do ostatecznego zwycięskiego zespołu lub pozycji w rankingu ostateczna decyzja będzie należeć do WagyuSwap.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Jak odebrać nagrody?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Po zakończeniu bitwy odwiedź stronę wydarzenia i kliknij przycisk „Odbierz nagrody” w górnej części lub w sekcji „Twój wynik”. Po odebraniu nagród tekst przycisku zmieni się na „Nagrody odebrane”.",
   "Trade to increase your rank": "Handluj, aby podnieść swoją pozycję w rankingu",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Kwalifikujące się pary: VLX/BUSD, WAGYU/VLX, ETH/VLX oraz BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Kwalifikujące się pary: VLX/VUSDT, WAGYU/VLX, ETH/VLX oraz BTCB/VLX",
   "Play as a team": "Grajcie jako zespół",
   "The higher your team’s rank, the better your prizes": "Im wyższa pozycja Twojego zespołu w rankingu, tym lepsze nagrody",
   "Top Traders": "Najlepsi traderzy",
