--- a/public/locales/pt-PT.json
+++ b/public/locales/pt-PT.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Perfil Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "e depois inscreva-se na competição clicando no botão \"QUERO BATALHAR\" acima.",
   "Battle Time": "Tempo de Batalha",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negoceie VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX durante o período de batalha para aumentar a pontuação tanto da sua equipa como sua. Consulte a secção de Regras abaixo para mais informações.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negoceie VLX/VUSDT, WAGYU/VLX, ETH/VLX e BTCB/VLX durante o período de batalha para aumentar a pontuação tanto da sua equipa como sua. Consulte a secção de Regras abaixo para mais informações.",
   "Prize Claim": "Reclamar Prémio",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "As equipas e os traders serão classificados por ordem de volume de negociação. Receba os seus prémios e comemore!",
   "Registration starting April 5": "Inscrição a partir de 5 de Abril",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Esta decisão é irreversível.",
   "I understand that my address may be displayed publicly throughout the competition.": "Compreendo que o meu endereço possa ser exposto publicamente durante todo o concurso.",
   "Eligible trading pairs": "Pares de negociação elegíveis",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Só serão incluídas nos cálculos de volume as transações nos pares VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Só serão incluídas nos cálculos de volume as transações nos pares VLX/VUSDT, WAGYU/VLX, ETH/VLX e BTCB/VLX.",
   "Calculating team ranks and winners": "Cálculo das classificações da equipa e dos vencedores",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "As classificações das equipas são calculadas pelo volume total combinado dos 500 melhores membros de cada equipa respetiva.",
   "Prize distribution": "Distribuição de prémios",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Os prémios serão distribuídos em WAGYU e partilhados por todos os membros de cada nível respetivo, de acordo com a seção de Prémios acima.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Os prémios WAGYU serão distribuídos de acordo com o preço WAGYU/BUSD no dia da distribuição. Todos os participantes elegíveis ganharão prémios no final do concurso.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Os prémios WAGYU serão distribuídos de acordo com o preço WAGYU/VUSDT no dia da distribuição. Todos os participantes elegíveis ganharão prémios no final do concurso.",
   "Every participant will win at least one prize at the end of the competition": "Cada participante ganhará pelo menos um prémio no final do concurso",
   "Fine print": "Cláusulas",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "Em caso de desacordo relativamente à equipa ou classificação final vencedora, o WagyuSwap terá a palavra final.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Como reclamar o(s) meu(s) prémio(s)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Após a batalha terminar, visite a página do evento e clique no botão \" Reclamar Prémios\" na secção superior ou na secção \"A Sua Pontuação\". Quando reclamar os seus prémios com êxito, o texto do botão mudará para \"Prémios reclamados\".",
   "Trade to increase your rank": "Negoceie para aumentar a sua classificação",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pares elegíveis: VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pares elegíveis: VLX/VUSDT, WAGYU/VLX, ETH/VLX e BTCB/VLX",
   "Play as a team": "Participar como equipa",
   "The higher your team’s rank, the better your prizes": "Quanto mais alta for a classificação da sua equipa, melhores serão os seus prémios",
   "Top Traders": "Principais Traders",
