--- a/public/locales/ro-RO.json
+++ b/public/locales/ro-RO.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profilul Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "apoi înscrie-te pentru competiție făcând clic pe butonul „VREAU SĂ MĂ LUPT” de mai sus.",
   "Battle Time": "Momentul bătăliei",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Tranzacționează VLX/BUSD, WAGYU/VLX, ETH/VLX și BTCB/VLX în timpul bătăliei pentru a crește punctajul tău și pe cel al echipei. Pentru mai multe detalii, vezi secțiunea reguli mai jos.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Tranzacționează VLX/VUSDT, WAGYU/VLX, ETH/VLX și BTCB/VLX în timpul bătăliei pentru a crește punctajul tău și pe cel al echipei. Pentru mai multe detalii, vezi secțiunea reguli mai jos.",
   "Prize Claim": "Revendicarea premiului",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Echipele și traderii vor fi clasați în ordinea volumului de tranzacționare. Colectează premiile și sărbătorește!",
   "Registration starting April 5": "Înscrierea începe pe 5 aprilie",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Nu se poate reveni asupra acestei decizii.",
   "I understand that my address may be displayed publicly throughout the competition.": "Înțeleg că adresa mea poate fi afișată public pe durata competiției.",
   "Eligible trading pairs": "Perechi de tranzacționare eligibile",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Numai tranzacțiile cu perechile VLX/BUSD, WAGYU/VLX, ETH/VLX și BTCB/VLX vor fi incluse în calcularea volumelor.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Numai tranzacțiile cu perechile VLX/VUSDT, WAGYU/VLX, ETH/VLX și BTCB/VLX vor fi incluse în calcularea volumelor.",
   "Calculating team ranks and winners": "Calcularea pozițiilor în clasament ale echipelor și câștigătorilor",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Pozițiile în clasament ale echipelor sunt calculate în funcție de volumul total combinat al primilor 500 de membri ai fiecărei echipe.",
   "Prize distribution": "Distribuirea premiilor",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Premiile vor fi distribuite în WAGYU și împărțite între toți membrii fiecărui grup, conform secțiunii Premii de mai sus.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Premiile în WAGYU vor fi distribuite în funcție de prețul WAGYU/BUSD în ziua distribuirii. Fiecare participant eligibil va câștiga premii la la sfârșitul competiției.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Premiile în WAGYU vor fi distribuite în funcție de prețul WAGYU/VUSDT în ziua distribuirii. Fiecare participant eligibil va câștiga premii la la sfârșitul competiției.",
   "Every participant will win at least one prize at the end of the competition": "Fiecare participant va câștiga cel puțin un premiu la sfârșitul competiției",
   "Fine print": "Imprimare fină",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "În cazul unui dezacord referitor la echipa finală câștigătoare sau la clasament, decizia finală revine WagyuSwap.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Cum îmi revendic premiul (premiile)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "După ce bătălia se încheie, vizitează pagina de evenimente și fă clic pe butonul „Revendică premii” din secțiunea superioară sau din secțiunea „Punctajul tău”. După ce revendici premiile cu succes, textul butonului se va modifica la „Premii revendicate”.",
   "Trade to increase your rank": "Tranzacționează pentru a-ți îmbunătăți poziția în clasament",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Perechi eligibile: VLX/BUSD, WAGYU/VLX, ETH/VLX și BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Perechi eligibile: VLX/VUSDT, WAGYU/VLX, ETH/VLX și BTCB/VLX",
   "Play as a team": "Joacă în echipă",
   "The higher your team’s rank, the better your prizes": "Cu cât poziția echipei tale în clasament este mai înaltă, cu atât premiile sunt mai mari",
   "Top Traders": "Traderi de top",
