--- a/public/locales/ru-RU.json
+++ b/public/locales/ru-RU.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "профиль Wagyu,",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "затем зарегистрируйтесь на соревнование, нажав на кнопку \"Я ХОЧУ НА БИТВУ\" выше.",
   "Battle Time": "Время битвы",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "В период битвы обменивайте VLX/BUSD, WAGYU/VLX, ETH/VLX и BTCB/VLX, чтобы повысить количество очков как у вас, так и у вашей команды. См. раздел \"Правила\", чтобы ознакомиться с более подробной информацией.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "В период битвы обменивайте VLX/VUSDT, WAGYU/VLX, ETH/VLX и BTCB/VLX, чтобы повысить количество очков как у вас, так и у вашей команды. См. раздел \"Правила\", чтобы ознакомиться с более подробной информацией.",
   "Prize Claim": "Получение приза",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Рейтинг команд и трейдеров определяется в зависимости от объема продаж. Забирайте свои призы и радуйтесь!",
   "Registration starting April 5": "Регистрация начнется 5 апреля",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Это решение нельзя отменить.",
   "I understand that my address may be displayed publicly throughout the competition.": "Я понимаю, что мой адрес будет отображаться публично на протяжении всего соревнования.",
   "Eligible trading pairs": "Подходящие торговые пары",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Только сделки с парами VLX/BUSD, WAGYU/VLX, ETH/VLX и BTCB/VLX будут включены в расчеты объема.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Только сделки с парами VLX/VUSDT, WAGYU/VLX, ETH/VLX и BTCB/VLX будут включены в расчеты объема.",
   "Calculating team ranks and winners": "Рассчитываем рейтинг команд и определяем победителей",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Рейтинги команд определяются по общему совокупному объему лучших 500 участников каждой соответствующей команды.",
   "Prize distribution": "Распределение приза",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Призы будут распределены в WAGYU между всеми участниками каждого соответствующего уровня согласно разделу \"Призы\" выше.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Призы WAGYU будут распределены согласно цене WAGYU/BUSD в день распределения. Каждый отвечающий требованиям участник получит призы в конце соревнования.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Призы WAGYU будут распределены согласно цене WAGYU/VUSDT в день распределения. Каждый отвечающий требованиям участник получит призы в конце соревнования.",
   "Every participant will win at least one prize at the end of the competition": "Каждый участник получит по крайней мере один приз в конце соревнования",
   "Fine print": "Важная информация",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "В случае возникновения разногласия в отношении окончательной команды-победителя или рейтинга решающее значение имеет мнение WagyuSwap.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Как получить приз(ы)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "После окончания битвы зайдите на страницу мероприятия и нажмите на кнопку \"Получить выигрыш\" в верхней части или в разделе \"Ваш счет\". После того, как вы успешно заберете свои призы, текст на кнопке сменится на \"Призы получены\".",
   "Trade to increase your rank": "Чтобы повысить свой рейтинг, проводите сделки",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Подходящие торговые пары: VLX/BUSD, WAGYU/VLX, ETH/VLX и BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Подходящие торговые пары: VLX/VUSDT, WAGYU/VLX, ETH/VLX и BTCB/VLX",
   "Play as a team": "Играйте в команде",
   "The higher your team’s rank, the better your prizes": "Чем выше рейтинг вашей команды, тем лучше ваши призы",
   "Top Traders": "Лучшие трейдеры",
