--- a/public/locales/tr-TR.json
+++ b/public/locales/tr-TR.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu Profili",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "daha sonra yukarıdaki \"SAVAŞMAK İSTİYORUM\" düğmesine tıklayarak yarışma için kaydolun.",
   "Battle Time": "Savaş Zamanı",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Hem kendi puanınızı hem de takımınızın puanı artırmak için savaş dönemi sırasında VLX/BUSD, WAGYU/VLX, ETH/VLX ve BTCB/VLX takası yapın. Daha fazla bilgi için aşağıdaki Kurallar bölümüne bakın.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Hem kendi puanınızı hem de takımınızın puanı artırmak için savaş dönemi sırasında VLX/VUSDT, WAGYU/VLX, ETH/VLX ve BTCB/VLX takası yapın. Daha fazla bilgi için aşağıdaki Kurallar bölümüne bakın.",
   "Prize Claim": "Ödül Alma",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Takımlar ve yatırımcılar işlem hacmine göre sıralanacaktır. Ödüllerinizi toplayın ve kutlayın!",
   "Registration starting April 5": "Kayıt 5 Nisanda başlıyor",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Bu karar geri alınamaz.",
   "I understand that my address may be displayed publicly throughout the competition.": "Adresimin yarışma boyunca herkese açık olarak gösterilebileceğini anlıyorum.",
   "Eligible trading pairs": "Uygun takas çiftleri",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Hacim hesaplamalarına yalnızca VLX/BUSD, WAGYU/VLX, ETH/VLX ve BTCB/VLX çiftlerinde yapılan işlemler dahil edilecektir.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Hacim hesaplamalarına yalnızca VLX/VUSDT, WAGYU/VLX, ETH/VLX ve BTCB/VLX çiftlerinde yapılan işlemler dahil edilecektir.",
   "Calculating team ranks and winners": "Takım sıralamalarını ve kazananları hesaplama",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Takım sıralamaları, her bir takımın ilk 500 üyesinin toplam hacmine göre hesaplanır.",
   "Prize distribution": "Ödül dağıtımı",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "WAGYU'de dağıtılacak ve yukarıdaki Ödüller bölümüne göre ilgili serinin tüm üyeleri tarafından paylaşılacak ödüller.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU ödülleri dağıtım gününde WAGYU/BUSD fiyatı üzerinden dağıtılacaktır. Her uygun katılımcı yarışma sonunda ödüller kazanacaktır.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU ödülleri dağıtım gününde WAGYU/VUSDT fiyatı üzerinden dağıtılacaktır. Her uygun katılımcı yarışma sonunda ödüller kazanacaktır.",
   "Every participant will win at least one prize at the end of the competition": "Her katılımcı yarışma sonunda en az bir ödül kazanacaktır",
   "Fine print": "Ek bilgi",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "Nihai kazanan takım veya sıra ile ilgili bir anlaşmazlık durumunda, WagyuSwap son sözü söyleyecektir.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Ödüllerimi nasıl alabilirim?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Savaş bittikten sonra, etkinlik sayfasını ziyaret edin ve üst bölümdeki veya \"Puanınız\" bölümündeki \"Ödülleri topla\" düğmesine tıklayın. Ödüllerinizi başarıyla aldığınızda, düğme metni \"Ödüller Alındı\" olarak değişecektir.",
   "Trade to increase your rank": "Sıranızı yükseltmek için takas yapın",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Geçerli çiftler: VLX/BUSD, WAGYU/VLX, ETH/VLX ve BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Geçerli çiftler: VLX/VUSDT, WAGYU/VLX, ETH/VLX ve BTCB/VLX",
   "Play as a team": "Takım olarak oyna",
   "The higher your team’s rank, the better your prizes": "Takımınızın sırası ne kadar yüksek olursa, ödüller o kadar iyi olur",
   "Top Traders": "En İyi Yatırımcılar",
