--- a/public/locales/uk-UA.json
+++ b/public/locales/uk-UA.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "профіль Wagyu,",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "а потім зареєструйтеся в змаганні, натиснувши кнопку «Я ХОЧУ В БІЙ» вище.",
   "Battle Time": "Час битви",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Обмінюйте VLX/BUSD, WAGYU/VLX, ETH/VLX і BTCB/VLX протягом битви, щоб піднімати свої бали та бали своєї команди. Докладні відомості наведено в розділі «Правила» нижче.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Обмінюйте VLX/VUSDT, WAGYU/VLX, ETH/VLX і BTCB/VLX протягом битви, щоб піднімати свої бали та бали своєї команди. Докладні відомості наведено в розділі «Правила» нижче.",
   "Prize Claim": "Отримання призу",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Рейтинг команд і трейдерів визначається за обсягами торгівлі. Зберіть свої призи та відсвяткуйте!",
   "Registration starting April 5": "Реєстрація починається з 5 квітня",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Це рішення не можна буде відмінити.",
   "I understand that my address may be displayed publicly throughout the competition.": "Я розумію, що до завершення моя адреса відображатиметься для широкого загалу.",
   "Eligible trading pairs": "Відповідні торгові пари",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "В обсяг торгівлі включатимуться тільки пари VLX/BUSD, WAGYU/VLX, ETH/VLX і BTCB/VLX.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "В обсяг торгівлі включатимуться тільки пари VLX/VUSDT, WAGYU/VLX, ETH/VLX і BTCB/VLX.",
   "Calculating team ranks and winners": "Обчислення рейтингу команд і визначення переможців",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Рейтинги команд обчислюються за загальним обсягом, що є сумою обсягів найкращих 500 учасників кожної команди.",
   "Prize distribution": "Розподіл призів",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Призи розподілятимуться в WAGYU між усіма учасниками кожного рівня, як указано в розділі «Призи» вище.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Призи WAGYU розподілятимуться відповідно до ціни WAGYU/BUSD в день розподілу. Кожен відповідний учасник виграє призи наприкінці змагання.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Призи WAGYU розподілятимуться відповідно до ціни WAGYU/VUSDT в день розподілу. Кожен відповідний учасник виграє призи наприкінці змагання.",
   "Every participant will win at least one prize at the end of the competition": "Кожен учасник виграє принаймні один приз наприкінці змагання",
   "Fine print": "Дрібний шрифт",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "У випадку розбіжності думок щодо остаточної команди-переможця або рейтингу рішення залишається за WagyuSwap.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Як мені отримати призи?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Коли битва завершиться, перейдіть на сторінку події та натисніть кнопку «Отримати призи» у верхній частині розділу «Ваші бали». Щойно ви отримаєте призи, надпис на кнопці зміниться на «Призи отримано».",
   "Trade to increase your rank": "Ведіть торгівлю, щоб підвищувати свій рейтинг",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Припустимі пари: VLX/BUSD, WAGYU/VLX, ETH/VLX і BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Припустимі пари: VLX/VUSDT, WAGYU/VLX, ETH/VLX і BTCB/VLX",
   "Play as a team": "Дійте як команда",
   "The higher your team’s rank, the better your prizes": "Що вищий рейтинг вашої команди, то кращі призи",
   "Top Traders": "Найкращі трейдери",
