--- a/public/locales/vi-VN.json
+++ b/public/locales/vi-VN.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Hồ sơ Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "của bạn, sau đó đăng ký tham gia cuộc thi bằng cách nhấn nút “TÔI MUỐN CHIẾN ĐẤU” ở trên.",
   "Battle Time": "Thời gian chiến đấu",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Giao dịch VLX/BUSD, WAGYU/VLX, ETH/VLX và BTCB/VLX trong thời gian chiến đấu để tăng điểm của bạn và đội của bạn. Xem phần Quy tắc dưới đây để biết thêm.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Giao dịch VLX/VUSDT, WAGYU/VLX, ETH/VLX và BTCB/VLX trong thời gian chiến đấu để tăng điểm của bạn và đội của bạn. Xem phần Quy tắc dưới đây để biết thêm.",
   "Prize Claim": "Nhận Giải thưởng",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Các nhóm và nhà giao dịch sẽ được xếp hạng theo thứ tự khối lượng giao dịch. Hãy thu thập giải thưởng của bạn và ăn mừng!",
   "Registration starting April 5": "Đăng ký bắt đầu từ ngày 5 tháng 4",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Quyết định này không thể được đảo ngược.",
   "I understand that my address may be displayed publicly throughout the competition.": "Tôi hiểu rằng địa chỉ của mình có thể được hiển thị công khai trong suốt cuộc so tài.",
   "Eligible trading pairs": "Cặp giao dịch đủ điều kiện",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Chỉ các giao dịch cho các cặp VLX/BUSD, WAGYU/VLX, ETH/VLX và BTCB/VLX mới được bao gồm trong tính toán khối lượng.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Chỉ các giao dịch cho các cặp VLX/VUSDT, WAGYU/VLX, ETH/VLX và BTCB/VLX mới được bao gồm trong tính toán khối lượng.",
   "Calculating team ranks and winners": "Đang tính xếp hạng đội và người chiến thắng",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Xếp hạng đội được tính bởi tổng khối lượng kết hợp cho 500 thành viên hàng đầu của mỗi đội.",
   "Prize distribution": "Phân phối giải thưởng",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Giải thưởng sẽ được phân phối bằng WAGYU và chia sẻ cho tất cả thành viên của mỗi bậc theo phần Giải thưởng ở trên.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Giải thưởng WAGYU sẽ được phân phối theo giá WAGYU/BUSD vào ngày phân phối. Mỗi người tham gia đủ điều kiện sẽ nhận giải thưởng vào cuối cuộc so tài.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Giải thưởng WAGYU sẽ được phân phối theo giá WAGYU/VUSDT vào ngày phân phối. Mỗi người tham gia đủ điều kiện sẽ nhận giải thưởng vào cuối cuộc so tài.",
   "Every participant will win at least one prize at the end of the competition": "Mỗi người tham gia sẽ giành ít nhất một giải thưởng vào cuối cuộc so tài",
   "Fine print": "Dòng chữ nhỏ",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "Trong trường hợp xảy ra bất đồng về đội chiến thắng sau cùng hoặc xếp hạng, WagyuSwap có tiếng nói cuối cùng.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Làm thế nào tôi có thể nhận giải thưởng của mình?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Sau khi trận chiến kết thúc, vào trang sự kiện và nhấn nút “Nhận giải thưởng” ở phần trên cùng hoặc trong phần “Điểm của bạn”. Sau khi bạn đã nhận thành công giải thưởng của mình, nội dung nút sẽ đổi thành “Giải thưởng đã được nhận”.",
   "Trade to increase your rank": "Giao dịch để tăng xếp hạng của bạn",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Các cặp đủ điều kiện: VLX/BUSD, WAGYU/VLX, ETH/VLX và BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Các cặp đủ điều kiện: VLX/VUSDT, WAGYU/VLX, ETH/VLX và BTCB/VLX",
   "Play as a team": "Chơi như một đội",
   "The higher your team’s rank, the better your prizes": "Xếp hạng của đội bạn càng cao thì giải thưởng của bạn càng lớn hơn",
   "Top Traders": "Nhà giao dịch hàng đầu",
