--- a/src/config/localization/translations.json
+++ b/src/config/localization/translations.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu Profile",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "then register for the competition by clicking “I WANT TO BATTLE” button above.",
   "Battle Time": "Battle Time",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.",
   "Prize Claim": "Prize Claim",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!",
   "Registration starting April 5": "Registration starting April 5",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "This decision cannot be reversed.",
   "I understand that my address may be displayed publicly throughout the competition.": "I understand that my address may be displayed publicly throughout the competition.",
   "Eligible trading pairs": "Eligible trading pairs",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.",
   "Calculating team ranks and winners": "Calculating team ranks and winners",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.",
   "Prize distribution": "Prize distribution",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.",
   "Every participant will win at least one prize at the end of the competition": "Every participant will win at least one prize at the end of the competition",
   "Fine print": "Fine print",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "How do I claim my prize(s)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.",
   "Trade to increase your rank": "Trade to increase your rank",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX",
   "Play as a team": "Play as a team",
   "The higher your team’s rank, the better your prizes": "The higher your team’s rank, the better your prizes",
   "Top Traders": "Top Traders",
