--- a/public/locales/bn-BD.json
+++ b/public/locales/bn-BD.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu প্রোফাইল",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "then register for the competition by clicking “I WANT TO BATTLE” button above.",
   "Battle Time": "লড়াইয়ের সময়",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "আপনার ও আপনার টিমের উভয়ের স্কোর বাড়াতে লড়াইয়ের সময় VLX/BUSD, WAGYU/VLX, ETH/VLX এবং BTCB/VLX ট্রেড করুন। আরও জানতে নীচের নিয়মাবলী বিভাগটি দেখুন।",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "আপনার ও আপনার টিমের উভয়ের স্কোর বাড়াতে লড়াইয়ের সময় VLX/VUSDT, WAGYU/VLX, ETH/VLX এবং BTCB/VLX ট্রেড করুন। আরও জানতে নীচের নিয়মাবলী বিভাগটি দেখুন।",
   "Prize Claim": "পুরস্কার দাবি",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "টিম ও ট্রেডাররা ট্রেডিংয়ের পরিমাণের ক্রম অনুসারে স্থান পাবে। আপনার পুরষ্কার সংগ্রহ এবং উদযাপন করুন!",
   "Registration starting April 5": "5 এপ্রিল থেকে রেজিস্ট্রেশন শুরু",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "এই সিদ্ধান্ত বদলানো যাবে না।",
   "I understand that my address may be displayed publicly throughout the competition.": "আমি বুঝেছি যে প্রতিযোগিতা জুড়ে আমার ঠিকানা সকলের কাছে প্রদর্শিত হতে পারে।",
   "Eligible trading pairs": "যোগ্য ট্রেডিং পেয়ার",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "VLX/BUSD, WAGYU/VLX, ETH/VLX এবং BTCB/VLX পেয়ারের ট্রেড কেবলমাত্র পরিমাণ গণনায় অন্তর্ভুক্ত করা হবে।",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "VLX/VUSDT, WAGYU/VLX, ETH/VLX এবং BTCB/VLX পেয়ারের ট্রেড কেবলমাত্র পরিমাণ গণনায় অন্তর্ভুক্ত করা হবে।",
   "Calculating team ranks and winners": "টিমের র‌্যাঙ্ক ও বিজেতাদের গণনা করা হচ্ছে",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "টিম র‌্যাঙ্কগুলি প্রতিটি টিমের শীর্ষস্থানীয় 500 সদস্যের মোট সংযুক্ত ভলিউম ধরে গণনা করা হয়।",
   "Prize distribution": "পুরস্কার বিতরণ",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "পুরস্কারগুলি WAGYU-এ বিতরণ করা হবে এবং উপরোক্ত পুরস্কার বিভাগ অনুযায়ী প্রতিটি স্তরের সমস্ত সদস্যদের মধ্যে ভাগ করা হবে।",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "বিতরণের দিন WAGYU/BUSD-এর দাম অনুযায়ী WAGYU পুরস্কার বিতরণ করা হবে। প্রতিটি যোগ্য প্রতিযোগী প্রতিযোগিতা শেষে পুরস্কার জিতবে।",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "বিতরণের দিন WAGYU/VUSDT-এর দাম অনুযায়ী WAGYU পুরস্কার বিতরণ করা হবে। প্রতিটি যোগ্য প্রতিযোগী প্রতিযোগিতা শেষে পুরস্কার জিতবে।",
   "Every participant will win at least one prize at the end of the competition": "প্রতিটি প্রতিযোগী প্রতিযোগিতার শেষে কমপক্ষে একটি পুরস্কার জিতবে",
   "Fine print": "Fine print",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "চূড়ান্ত বিজয়ী টিম বা র‌্যাঙ্কের বিষয়ে মতবিরোধের ক্ষেত্রে WagyuSwap-এর সিদ্ধান্তই চূড়ান্ত থাকবে।",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "আমি কীভাবে আমার পুরস্কার দাবি করব?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "লড়াই শেষ হওয়ার পরে ইভেন্টের পেজটি দেখুন এবং উপরের অংশে বা \"আপনার স্কোর\" বিভাগে \"পুরস্কার দাবি করুন\" বোতামটি ক্লিক করুন। একবার আপনি নিজের পুরষ্কার সাফল্যের সাথে দাবি করার পরে, বোতামের পাঠ্যটি \"পুরষ্কার দাবি করা হয়েছে\" হিসাবে পরিবর্তিত হবে।",
   "Trade to increase your rank": "আপনার র‌্যাঙ্ক বাড়ানোর জন্য ট্রেড করুন",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "যোগ্য পেয়ার: VLX/BUSD, WAGYU/VLX, ETH/VLX এবং BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "যোগ্য পেয়ার: VLX/VUSDT, WAGYU/VLX, ETH/VLX এবং BTCB/VLX",
   "Play as a team": "টিম হিসেবে খেলুন",
   "The higher your team’s rank, the better your prizes": "আপনার দলের র‌্যাঙ্ক যত বেশি হবে আপনার পুরষ্কারগুলি তত ভাল হবে",
   "Top Traders": "সেরা ট্রেডার",
