--- a/public/locales/hu-HU.json
+++ b/public/locales/hu-HU.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu profil",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "majd nevezzen be a versenyre a fenti „CSATÁZNI AKAROK” gombra kattintva.",
   "Battle Time": "Csataidő",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Kereskedjen VLX/BUSD, WAGYU/VLX, ETH/VLX és BTCB/VLX-vel csataidőben, hogy emelje saját maga és csapata pontszámát. További tájékoztatásért lásd az alábbi Szabályok részt.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Kereskedjen VLX/VUSDT, WAGYU/VLX, ETH/VLX és BTCB/VLX-vel csataidőben, hogy emelje saját maga és csapata pontszámát. További tájékoztatásért lásd az alábbi Szabályok részt.",
   "Prize Claim": "Nyeremények igénylése",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "A csapatokat és a kereskedőket a kereskedési volumen sorrendjében rangsoroljuk. Gyűjtse be nyereményeit és ünnepeljen!",
   "Registration starting April 5": "A nevezés április 5-én kezdődik",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Ezt a döntést nem lehet visszavonni.",
   "I understand that my address may be displayed publicly throughout the competition.": "Megértettem, hogy a címem nyilvánosan megjelenhet a verseny során.",
   "Eligible trading pairs": "Választható kereskedési párok",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Csak a VLX/BUSD, WAGYU/VLX, ETH/VLX és BTCB/VLX párokkal folytatott kereskedések szerepelnek a volumen számításaiban.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Csak a VLX/VUSDT, WAGYU/VLX, ETH/VLX és BTCB/VLX párokkal folytatott kereskedések szerepelnek a volumen számításaiban.",
   "Calculating team ranks and winners": "Csapatok rangsorolása és a nyertesek kiszámítása",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "A csapatok rangsorolását az egyes csapatok első 500 tagjának összesített volumene alapján számítják ki.",
   "Prize distribution": "Nyeremények felosztása",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "A nyereményeket WAGYU-ban osztják fel és az egyes szintek tagjai kapják a fenti Nyeremények részben.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "A WAGYU nyereményeket felosztás napján érvényes WAGYU/BUSD árfolyam alapján osztjuk fel. Minden jogosult résztvevő nyereményeket kap a verseny végén.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "A WAGYU nyereményeket felosztás napján érvényes WAGYU/VUSDT árfolyam alapján osztjuk fel. Minden jogosult résztvevő nyereményeket kap a verseny végén.",
   "Every participant will win at least one prize at the end of the competition": "Minden versenyző legalább egy díjat nyer a verseny végén",
   "Fine print": "A kisbetűs rész",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "A végső győztes csapatot vagy rangsorolást érintő nézeteltérés esetén a WagyuSwap végső szava a döntő.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Hogyan igényelhetem a nyereménye(i)met?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Miután a csata befejeződött, látogasson el az esemény oldalára, és kattintson a „Nyeremények igénylése” gombra a felső részben vagy a „Saját pontszámom” részben. Miután sikeresen igényelte nyereményét, a gomb felirata „Nyereményt igényelt” szövegre vált.",
   "Trade to increase your rank": "Kereskedjen, hogy emelje rangsorolását",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Jogosult párok: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Jogosult párok: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX",
   "Play as a team": "Játsszon csapatként",
   "The higher your team’s rank, the better your prizes": "Minél magasabb a csapat rangsorolása, annál jobbak az Ön nyereményei",
   "Top Traders": "Csúcskereskedők",
