--- a/public/locales/it-IT.json
+++ b/public/locales/it-IT.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Profilo Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "poi registrati alla competizione facendo clic sul tasto \"VOGLIO PARTECIPARE ALLA BATTAGLIA\" qui sopra.",
   "Battle Time": "Tempo di battaglia",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Scambia VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX durante la battaglia per far crescere il tuo punteggio e quello del tuo team. Per maggiori informazioni consulta le Regole riportate di seguito.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Scambia VLX/VUSDT, WAGYU/VLX, ETH/VLX e BTCB/VLX durante la battaglia per far crescere il tuo punteggio e quello del tuo team. Per maggiori informazioni consulta le Regole riportate di seguito.",
   "Prize Claim": "Richiesta premi",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "I team e i trader saranno classificati in base al loro volume di scambi. Colleziona i tuoi premi e festeggia le tue vittorie!",
   "Registration starting April 5": "Le registrazioni iniziano il 5 aprile",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Questa decisione non può essere annullata.",
   "I understand that my address may be displayed publicly throughout the competition.": "Accetto il fatto che il mio indirizzo sia visibile al pubblico durante la competizione.",
   "Eligible trading pairs": "Coppie di scambio disponibili",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Solo gli scambi delle coppie VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX saranno conteggiati nel calcolo dei volumi.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Solo gli scambi delle coppie VLX/VUSDT, WAGYU/VLX, ETH/VLX e BTCB/VLX saranno conteggiati nel calcolo dei volumi.",
   "Calculating team ranks and winners": "Calcolo della classifica dei team e dei vincitori",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Le classifiche dei team saranno calcolate in base al volume totale di scambi combinato dei 500 migliori membri dei singoli team.",
   "Prize distribution": "Distribuzione dei premi",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Premi da distribuire in WAGYU e da condividere tra tutti i membri di un dato livello come indicato nella precedente sezione dei Premi.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "I premi in WAGYU saranno distribuiti in base al prezzo WAGYU/BUSD nel giorno della distribuzione. Tutti i partecipanti idonei vinceranno dei premi al termine della competizione.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "I premi in WAGYU saranno distribuiti in base al prezzo WAGYU/VUSDT nel giorno della distribuzione. Tutti i partecipanti idonei vinceranno dei premi al termine della competizione.",
   "Every participant will win at least one prize at the end of the competition": "Tutti i partecipanti vinceranno almeno un premio alla fine della competizione",
   "Fine print": "Clausole scritte in piccolo",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "In caso di controversie sul vincitore finale o sulla classifica finale, WagyuSwap avrà l'ultima parola.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Come posso richiedere i premi?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Al termine della battaglia, visita la pagina dell'evento e fai clic sul tasto \"Richiedi Premi\" nella sezione in alto o nella sezione \"Il mio punteggio\". Dopo aver richiesto i premi, il testo del pulsante diventerà \"Premi richiesti\".",
   "Trade to increase your rank": "Fai scambi per aumentare la tua classifica",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Coppie idonee: VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Coppie idonee: VLX/VUSDT, WAGYU/VLX, ETH/VLX e BTCB/VLX",
   "Play as a team": "Gioco di squadra",
   "The higher your team’s rank, the better your prizes": "Quanto migliore è la classifica del tuo team, tanto maggiori saranno i premi",
   "Top Traders": "I migliori trader",
