--- a/public/locales/ja-JP.json
+++ b/public/locales/ja-JP.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "設定しましょう",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "次に、上にある「参加します」ボタンをクリックして試合に登録しましょう。",
   "Battle Time": "バトルタイム",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "バトル期間中に、VLX/BUSD、WAGYU/VLX、ETH/VLXおよびBTCB/VLXをトレードして、自分や自分のチームのスコアを上げましょう。詳しくは、以下のルールセクションをご覧ください。",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "バトル期間中に、VLX/VUSDT、WAGYU/VLX、ETH/VLXおよびBTCB/VLXをトレードして、自分や自分のチームのスコアを上げましょう。詳しくは、以下のルールセクションをご覧ください。",
   "Prize Claim": "賞金請求",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "チームのトレーダーは、トレードのボリューム順に位置付けされます。賞金を回収して祝いましょう！",
   "Registration starting April 5": "登録は4月5日に開始されます",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "このアクションは巻き戻すことができます。",
   "I understand that my address may be displayed publicly throughout the competition.": "私のアドレスが試合中に公開されることを理解しています。",
   "Eligible trading pairs": "取引可能なペア",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "取引量の計算には、VLX/BUSD、WAGYU/VLX、ETH/VLX、BTCB/VLXペアの取引のみが含まれます。",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "取引量の計算には、VLX/VUSDT、WAGYU/VLX、ETH/VLX、BTCB/VLXペアの取引のみが含まれます。",
   "Calculating team ranks and winners": "チームランクと勝者の計算方法",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "チームランクは、それぞれのチームメンバーの上位500人の合計取引量を使用して計算されます。",
   "Prize distribution": "賞金分配",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "上記の賞金セクションに記載されている通り、賞金は、それぞれのティアの全メンバーの間でWAGYUで分配されます。",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU賞金は、分配日のWAGYU/BUSDの価格に基づいて分配されます。該当する参加者は全員、試合の終了時に賞金を獲得できます。",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU賞金は、分配日のWAGYU/VUSDTの価格に基づいて分配されます。該当する参加者は全員、試合の終了時に賞金を獲得できます。",
   "Every participant will win at least one prize at the end of the competition": "試合終了時に全参加者が少なくとも1つの賞金を獲得できます",
   "Fine print": "但書き",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "最終的に勝利するチームまたはチームのランクについて意見の相違があった場合、最終決定権はWagyuSwapにあります。",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "賞金を受け取る方法",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "バトルが終わった後、イベントページに移動し、上のセクションもしくは「あなたのスコア」セクションにある「賞金の請求」ボタンをクリックします。",
   "Trade to increase your rank": "ランクを上げるには取引しましょう",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "取引可能なペア：VLX/BUSD、WAGYU/VLX、ETH/VLX、およびBTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "取引可能なペア：VLX/VUSDT、WAGYU/VLX、ETH/VLX、およびBTCB/VLX",
   "Play as a team": "チームとして参加",
   "The higher your team’s rank, the better your prizes": "チームのランクが高いほど、より優れた賞金を獲得できます",
   "Top Traders": "トップトレーダー",
