--- a/public/locales/pt-BR.json
+++ b/public/locales/pt-BR.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Perfil Wagyu",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "depois registre-se na competição clicando no botão \"QUERO BATALHAR\" acima.",
   "Battle Time": "Tempo de batalha",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negocie VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX durante o período de batalha para aumentar a pontuação tanto da sua equipe quanto a sua. Consulte a seção de Regras abaixo para obter mais informações.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Negocie VLX/VUSDT, WAGYU/VLX, ETH/VLX e BTCB/VLX durante o período de batalha para aumentar a pontuação tanto da sua equipe quanto a sua. Consulte a seção de Regras abaixo para obter mais informações.",
   "Prize Claim": "Reivindicar Prêmio",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Equipes e negociantes serão classificados na ordem de volume de negócios. Colete seus prêmios e comemore!",
   "Registration starting April 5": "O registro começa no dia 5 de abril",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Esta decisão é irreversível.",
   "I understand that my address may be displayed publicly throughout the competition.": "Compreendo que meu endereço possa ser exposto publicamente durante todo o concurso.",
   "Eligible trading pairs": "Pares de negociação elegíveis",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Só serão incluídas nos cálculos de volume as negociações nos pares VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Só serão incluídas nos cálculos de volume as negociações nos pares VLX/VUSDT, WAGYU/VLX, ETH/VLX e BTCB/VLX.",
   "Calculating team ranks and winners": "Cálculo das classificações da equipe e dos vencedores",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "As classificações das equipes são calculadas pelo volume total combinado dos 500 melhores membros de cada equipe.",
   "Prize distribution": "Distribuição de prêmios",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Os prêmios serão distribuídos em WAGYU e compartilhados por todos os membros de cada determinado nível, de acordo com a seção de Prêmios acima.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Os prêmios WAGYU serão distribuídos de acordo com o preço do WAGYU/BUSD no dia da distribuição. Todos os participantes elegíveis ganharão prêmios no final da competição.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "Os prêmios WAGYU serão distribuídos de acordo com o preço do WAGYU/VUSDT no dia da distribuição. Todos os participantes elegíveis ganharão prêmios no final da competição.",
   "Every participant will win at least one prize at the end of the competition": "Cada participante ganhará pelo menos um prêmio ao término da competição",
   "Fine print": "Cláusulas",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "Em caso de discordância com relação à equipe final vencedora ou classificação, o WagyuSwap terá a palavra final.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Como reivindico meu(s) prêmio(s)?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Depois do término da batalha, visite a página do evento e clique no botão “Reivindicar prêmios” na seção superior ou na seção “Sua Pontuação”. Depois de reivindicar seus prêmios com sucesso, o texto do botão mudará para “Prêmios reivindicados”.",
   "Trade to increase your rank": "Negocie para aumentar sua classificação",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pares elegíveis: VLX/BUSD, WAGYU/VLX, ETH/VLX e BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Pares elegíveis: VLX/VUSDT, WAGYU/VLX, ETH/VLX e BTCB/VLX",
   "Play as a team": "Participar como equipe",
   "The higher your team’s rank, the better your prizes": "Quanto mais alta for a classificação da sua equipe, melhores serão os seus prêmios",
   "Top Traders": "Melhores Negociantes",
