--- a/public/locales/sv-SE.json
+++ b/public/locales/sv-SE.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu-profil",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "anmäl dig sedan till tävlingen genom att klicka på knappen \"JAG VILL STRIDA\" ovan.",
   "Battle Time": "Dags för strid",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Växla VLX/BUSD, WAGYU/VLX, ETH/VLX och BTCB/VLX under stridsperioden för att förbättra både din och ditt teams poäng. Se avsnittet Regler nedan för mer.",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "Växla VLX/VUSDT, WAGYU/VLX, ETH/VLX och BTCB/VLX under stridsperioden för att förbättra både din och ditt teams poäng. Se avsnittet Regler nedan för mer.",
   "Prize Claim": "Inlösning av priser",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "Teams och växlare kommer att rankas efter växlad volym. Samla in dina priser och fira!",
   "Registration starting April 5": "Registreringen startar 5 april",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "Detta beslut kan inte återkallas.",
   "I understand that my address may be displayed publicly throughout the competition.": "Jag förstår att min adress kan visas offentligt under tävlingens gång.",
   "Eligible trading pairs": "Valbara växlingspar",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Endast växlingar med VLX/BUSD-, WAGYU/VLX-, ETH/VLX- och BTCB/VLX-par kommer att inkluderas i volymberäkningarna.",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "Endast växlingar med VLX/VUSDT-, WAGYU/VLX-, ETH/VLX- och BTCB/VLX-par kommer att inkluderas i volymberäkningarna.",
   "Calculating team ranks and winners": "Beräknar lagrankningar och vinnare",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "Lagrankningar beräknas genom en total kombinerad volym av de 500 bästa medlemmarna i varje lag.",
   "Prize distribution": "Prisdistribuering",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "Priserna kommer att distribueras i WAGYU och delas av alla medlemmar på respektive nivå enligt avsnittet Priser ovan.",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU-priserna kommer att distribueras enligt WAGYU/BUSB-priset samma dag som distribueringen. Varje berättigad deltagare kommer att vinna priser i slutet av tävlingen.",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU-priserna kommer att distribueras enligt WAGYU/BUSB-priset samma dag som distribueringen. Varje berättigad deltagare kommer att vinna priser i slutet av tävlingen.",
   "Every participant will win at least one prize at the end of the competition": "Varje deltagare kommer att vinna åtminstone ett pris i slutet av tävlingen",
   "Fine print": "Det finstilta",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "I händelse av meningsskiljaktigheter rörande det slutgiltiga vinnarlaget eller rankningen är det WagyuSwap som har sista ordet.",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "Hur löser jag in mitt pris?",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "Efter stridens slut besöker du evenemangssidan och klickar på knappen \"Lös in priser\" längst upp eller i avsnittet \"Din poäng\". När du väl har löst in dina priser kommer texten på knappen att ändras till \"Priserna har lösts in\".",
   "Trade to increase your rank": "Växla för att förbättra din rankning",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Valbara par: VLX/BUSD, WAGYU/VLX, ETH/VLX och BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "Valbara par: VLX/VUSDT, WAGYU/VLX, ETH/VLX och BTCB/VLX",
   "Play as a team": "Spela som ett lag",
   "The higher your team’s rank, the better your prizes": "Ju högre ditt lags rankning, desto bättre priser",
   "Top Traders": "Toppväxlare",
