--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu 个人资料",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "然后点击上方的“我想战斗”报名参赛。",
   "Battle Time": "战斗时间",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "在战斗期间交易 VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX，以提高您和您团队的得分。请参阅下面的“规则”部分以了解更多信息。",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "在战斗期间交易 VLX/VUSDT、WAGYU/VLX、ETH/VLX 和 BTCB/VLX，以提高您和您团队的得分。请参阅下面的“规则”部分以了解更多信息。",
   "Prize Claim": "奖金领取",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "团队和交易者将按交易量排名。收集您的奖金并庆祝！",
   "Registration starting April 5": "注册从 4 月 5 日开始",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "此决定无法撤消。",
   "I understand that my address may be displayed publicly throughout the competition.": "我了解我的地址可能会在整个比赛期间公开显示。",
   "Eligible trading pairs": "符合条件的交易对",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "交易量计算中仅包括 VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX 对的交易。",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "交易量计算中仅包括 VLX/VUSDT、WAGYU/VLX、ETH/VLX 和 BTCB/VLX 对的交易。",
   "Calculating team ranks and winners": "正在计算团队排名和获胜者",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "团队排名是根据各自团队中取得排行榜前 500 名的成员的合计交易量计算得出的。",
   "Prize distribution": "奖金分发",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "根据上述“奖金”部分，奖金将以 WAGYU 分发，并由各个级别的所有成员共享。",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU 奖金将按照分发当天的 WAGYU/BUSD 价格进行分发。每个符合条件的参与者都将在比赛结束时赢得奖金。",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU 奖金将按照分发当天的 WAGYU/VUSDT 价格进行分发。每个符合条件的参与者都将在比赛结束时赢得奖金。",
   "Every participant will win at least one prize at the end of the competition": "每个参与者都将在比赛结束时赢得至少一份奖金。",
   "Fine print": "细则",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "如果在最终获胜团队或排名上存在分歧，WagyuSwap 将拥有最终决定权。",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "如何领取奖金？",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "战斗结束后，请访问活动页面，然后点击顶部或“您的分数”部分中的“领取奖金”按钮。成功领取奖金后，按钮文本将变为“已领取奖金”。",
   "Trade to increase your rank": "交易以提高您的排名",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "符合条件的货币对：VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "符合条件的货币对：VLX/VUSDT、WAGYU/VLX、ETH/VLX 和 BTCB/VLX",
   "Play as a team": "以团队形式参与",
   "The higher your team’s rank, the better your prizes": "团队排名越高，奖金就越多",
   "Top Traders": "排名前列的交易者",
