--- a/public/locales/zh-TW.json
+++ b/public/locales/zh-TW.json
@@ -656,7 +656,7 @@
   "Wagyu Profile": "Wagyu 個人檔案",
   "then register for the competition by clicking “I WANT TO BATTLE” button above.": "然後按一下上方的「我想戰鬥」按鈕，即可註冊參加比賽。",
   "Battle Time": "戰鬥時間",
-  "Trade VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "在戰鬥期間交易 VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX，以提高您和您團隊的得分。請參閱下面的「規則」部分以瞭解更多資訊。",
+  "Trade VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX during the battle period to raise both your and your team’s score. See the Rules section below for more.": "在戰鬥期間交易 VLX/VUSDT、WAGYU/VLX、ETH/VLX 和 BTCB/VLX，以提高您和您團隊的得分。請參閱下面的「規則」部分以瞭解更多資訊。",
   "Prize Claim": "獎金領取",
   "Teams and traders will be ranked in the order of trading volume. Collect your prizes and celebrate!": "團隊中的交易者將按交易量來排序。收集獎金並好好慶祝一番吧！",
   "Registration starting April 5": "4 月 5 日開始註冊",
@@ -684,12 +684,12 @@
   "This decision cannot be reversed.": "此決定無法撤消。",
   "I understand that my address may be displayed publicly throughout the competition.": "我瞭解我的地址可能會在整個比賽期間公開顯示。",
   "Eligible trading pairs": "符合條件的交易對",
-  "Only trades on VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "交易量計算中僅包括 VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX 對的交易。",
+  "Only trades on VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX pairs will be included in volume calculations.": "交易量計算中僅包括 VLX/VUSDT、WAGYU/VLX、ETH/VLX 和 BTCB/VLX 對的交易。",
   "Calculating team ranks and winners": "正在計算團隊排名和獲勝者",
   "Team ranks are calculated by the total combined volume of the top 500 members of each respective team.": "團隊排名是根據各自團隊中取得排行榜前 500 名的成員的總交易量計算得出的。",
   "Prize distribution": "獎金分發",
   "Prizes to be distributed in WAGYU and shared by all members of each respective tier as per the Prizes section above.": "根據上述「獎金」部分，獎金將以 WAGYU 分發，並由各個級別的所有成員共享。",
-  "WAGYU prizes will be distributed as per the WAGYU/BUSD price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU 獎金將按照分發當天的 WAGYU/BUSD 價格進行分發。每個符合條件的參與者都將在比賽結束時贏得獎金。",
+  "WAGYU prizes will be distributed as per the WAGYU/VUSDT price on the day of distribution. Every eligible participant will win prizes at the end of the competition.": "WAGYU 獎金將按照分發當天的 WAGYU/VUSDT 價格進行分發。每個符合條件的參與者都將在比賽結束時贏得獎金。",
   "Every participant will win at least one prize at the end of the competition": "每個參與者都將在比賽結束時贏得至少一份獎金。",
   "Fine print": "細則",
   "In the event of a disagreement concerning the final winning team or rank, WagyuSwap will have the final say.": "如果在最終獲勝團隊或排名上存在分歧，WagyuSwap 將擁有最終決定權。",
@@ -703,7 +703,7 @@
   "How do I claim my prize(s)?": "如何領取獎金？",
   "After the battle ends, visit the event page and click the “Claim Prizes” button in the top section or in “Your Score” section. Once you claim your prizes successfully, the button text will change to “Prizes Claimed”.": "戰鬥結束後，請造訪活動頁面，按一下頂部或「您的分數」部分裡的「領取獎金」按鈕。一旦成功領獎，按鈕的文字將變為「獎金已領」。",
   "Trade to increase your rank": "交易以提高您的排名",
-  "Eligible pairs: VLX/BUSD, WAGYU/VLX, ETH/VLX and BTCB/VLX": "符合條件的貨幣對：VLX/BUSD、WAGYU/VLX、ETH/VLX 和 BTCB/VLX",
+  "Eligible pairs: VLX/VUSDT, WAGYU/VLX, ETH/VLX and BTCB/VLX": "符合條件的貨幣對：VLX/VUSDT、WAGYU/VLX、ETH/VLX 和 BTCB/VLX",
   "Play as a team": "以團隊形式參與",
   "The higher your team’s rank, the better your prizes": "團隊排名越高，獎金就越多",
   "Top Traders": "排名前列的交易者",
